Public/style/main.css
/* ... */
.button-field input {
    padding: .538em;
    background: rgb(46, 152, 171);
    background: rgba(46, 152, 171, .8);
    border: .125em solid transparent;
    border-radius: 0;
    font-family: Quicksand, Arial, Helvetica, sans-serif;
    font-size: 1em;
    color: #fff;
    cursor: pointer;
    -webkit-appearance: none;
}
    .button-field input:hover {
        background: rgb(46, 152, 171);
        border: .125em solid rgb(17, 100, 115);
    }
    .button-field input:focus, .button-field input:active {
        background: #5fd93b;
        outline: none;
    }

/* miscellany */
.field ol, .field ul {
    padding: 0;
    list-style: none;
}

/*========================================================*/
/* general styling */

/* body */
body {
    background: #fff url('assets/body.png') repeat 0 0;
}

/* error pages */
.error {
    text-align: center;
}
    .error img {
        border: 2px solid #fff;
    }

/* navigation */
.navigation {
    margin: 0;
    padding: 0;
    list-style: none;
}
    .navigation li {
        display: block;
        float: left;
    }
        .navigation li a {
            display: block;
            float: left;
        }

/* header */
.header {
    background: #fff;
    background: rgba(255, 255, 255, .4);
    line-height: 5em;
    border-top: .063em solid #6db7c4;
}
    .header:before {
        display: block;
        border-top: .188em solid #2e98ab;
        border-bottom: .063em solid #206a77;
    }
    .header a, .header a:visited {
        color: #0a8fa2;
        border: none;
    }
    .header a:focus {
        outline: none;
    }
    .header .title-bar {
        display: block;
        float: left;
    }
        .header .title-bar a {
            margin: 0;
            padding: 0 .412em;
            display: block;
            float: left;
            font-size: 2.125em;
        }
        .header .title-bar .toggle {
            display: none;
            float: right;
            font-size: 1.625em;
            padding: 0 1em;
        }
    .header .navigation {
        padding: 0 1em;
        float: right;
    }
        .header .navigation li {
            line-height: 3em;
            margin: 0 0 0 1em;
            padding: 1em 0;
        }
            .header .navigation li a {
                padding: 0 .5em;
                background: rgba(255, 255, 255);
                background: rgba(255, 255, 255, .4);
                font-weight: normal;
                -moz-transition: all .2s ease-in;
                -ms-transition: all .2s ease-in;
                -webkit-transition: all .2s ease-in;
                transition: all .2s ease-in;
            }
                .header .navigation li a:hover {
                    background: rgb(46, 152, 171);
                    background: rgba(46, 152, 171, .8);
                    color: #fff;
                }
            .header .navigation li .add {
                margin: 0 0 0 .125em;
                text-align: center;
            }

/* responsive header - small screens */
@media all and (max-width: 660px) {
    
    .header {
        height: auto;
        position: static;
        z-index: 100;
        width: 100%;
        overflow: hidden;
        background: #fff url('assets/header.mobile.png') repeat 0 0;
        border-bottom: .063em solid #6db7c4;
    }
    .has-js .header {
        position: fixed;
    }
    .header.closed {
        height: 5em;
    }
        .header .title-bar {
            float: none;
        }
            .header .title-bar .toggle {
                display: block;
            }
        .header .navigation {
            float: none;
        }
            .header .navigation li {
                margin: 1em 0;
                padding: 0;
                float: none;
            }
                .header .navigation li:after {
                    content: '';
                    display: table;
                    clear: both;
                }
                .header .navigation li a {
                    float: none;
                }
                .header .navigation li .view, .header .navigation li .add {
                    margin: 0;
                    float: left;
                    -moz-box-sizing: border-box;
                    -ms-box-sizing: border-box;
                    -webkit-box-sizing: border-box;
                    box-sizing: border-box;
                }
                .header .navigation li .view {
                    width: 80%;
                }
                .header .navigation li .add {
                    width: 20%;
                    background: rgb(46, 152, 171);
                    background: rgba(46, 152, 171, .8);
                    color: #fff;
                }
    
}

/* footer */
.footer {
    padding: 2em 0 1em 0;
}
    .footer .navigation {
        padding: 0 1em;
    }
        .footer li {
            margin: 0 1em 0 0;
        }

/* item - shared styles for players and games */
.items {
    list-style: none;
    padding: 0;
}
    .item {
        margin: 0 1em 1em 0;
        padding: 0;
        min-height: 80px;
        padding: .875em;
        position: relative;
        display: block;
        background: #fff;
        background: rgba(255, 255, 255, .4);
        border: .125em solid transparent;
        color: #333;
        -moz-transition: all .5s ease-in-out;
        -ms-transition: all .5s ease-in-out;
        -webkit-transition: all .5s ease-in-out;
        transition: all .5s ease-in-out;
    }
    .whole .item {
        margin: 0 0 1em 0;
    }
        .item:hover, .item:active, .item:focus {
            background: #fff;
            background: rgba(255, 255, 255, .8);
            border: .125em solid rgb(46, 152, 171);
        }
        .item img {
            position: absolute;
            left: 12px;
            top: 12px;
            display: block;
            border: .125em solid #fff;
        }
        .item .details {
            padding: 0 0 0 100px;
        }
/* ... */

